Add recent fixes and arch additions from hexedpackets@github

--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,8 @@
     "express": "3.4.4",
     "jade": "*",
     "node-trello": "*",
-    "dot": ">=1.0.2"
+    "dot": ">=1.0.2",
+    "express-dot": "*",
+    "js-yaml": "*"
   }
 }
